--- a/bin/MLF_Forest_SerialDebug.app/Contents/Info.plist
+++ b/bin/MLF_Forest_SerialDebug.app/Contents/Info.plist
@@ -3,34 +3,38 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>13D65</string>
+	<string>16F73</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
 	<string>MLF_Forest_SerialDebug</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.openFrameworks</string>
+	<string>cc.openFrameworks.ofapp</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleSupportedPlatforms</key>
+	<array>
+		<string>MacOSX</string>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>5B1008</string>
+	<string>8E2002</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>13C64</string>
+	<string>16E185</string>
 	<key>DTSDKName</key>
-	<string>macosx10.9</string>
+	<string>macosx10.12</string>
 	<key>DTXcode</key>
-	<string>0511</string>
+	<string>0832</string>
 	<key>DTXcodeBuild</key>
-	<string>5B1008</string>
+	<string>8E2002</string>
 </dict>
 </plist>
